# air_quality

./: .gitignore  Cargo.toml  README.md
json_files/: sample.json
nodejs/: airQuality.js  main.js  myEvents.js
src/: air_objects.rs  main.rs  my_fs.rs
src/rust_modules/: adjacent.rs  mod.rs  my_path.rs  primes.rs
